fix: long training names causing overflow
add word-break: break-word to allow word breaks if needed

--- a/site/assets/src/scss/blocks/dashboard.scss
+++ b/site/assets/src/scss/blocks/dashboard.scss
@@ -92,6 +92,7 @@ dash-sidebar-toggle {
 
     h1 {
         margin-bottom: 0;
+        word-break: break-word;
     }
 }
 .dashboard__header.left {
